<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignİnActivity">

    <LinearLayout
        android:weightSum="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="150dp">
            <ImageView
                android:layout_marginTop="7dp"
                android:src="@drawable/matrix"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp" />
            <TextView
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:text="@string/joinUs"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorPrimary"
                    android:drawableLeft="@drawable/usericon"
                    android:drawableStart="@drawable/usericon"
                    android:hint="@string/EditTextUsername"
                    android:padding="10dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#E8F5E9" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorPrimary"
                    android:drawableLeft="@drawable/lockicon"
                    android:drawableStart="@drawable/lockicon"
                    android:hint="@string/EditTextPassword"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#E8F5E9" />
                <TextView
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginTop="5dp"
                    android:text="@string/forgotpassword"
                    android:layout_gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:textColor="#FFFFFF"
                    android:text="@string/ButtonSignin"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/registration"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</RelativeLayout>